final draft edits 8/5/22 12:02am

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
     margin-left: 0px;
     margin-right: 0px;
 }
+.Header{
+    margin-left: 144px;
+    margin-bottom: 64px;
+}
 .container2{
     display: flex;
     justify-content: center;
@@ -34,6 +38,7 @@
     background-size: cover;
     height: auto;
     width: 100%;
+    margin-bottom: 64px;
 }
 .problemStatement{
     margin-top: 24px;
@@ -44,6 +49,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 64px;
 }
 .container4{
     width: 90%;
@@ -105,4 +111,9 @@
         justify-items: center;
     }    
     }
+@media (max-width:800px){
+    .Header{
+        font-size: 84px;
+    }
+}
 }
